added category show page

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,8 +1,10 @@
+%section.genre
+  %header.clearfix
+    %h1= @category.name
+
 %article.video_category
-  %header
-    %h3= link_to "#{@category.name.pluralize}", category_path(@category)
   .videos.row
     - @category.videos.each do |video|
-      .video.span2
+      .video.col-sm-2
         = link_to "#{video_path(video)}", nil do
           %img(src="#{video.small_cover_url}")
