--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -1,7 +1,7 @@
 %article.video_category
   - @categories.each do |category|
     %header
-      %h3= link_to category.name
+      %h3= link_to category.name, category
     .videos.row
       - category.videos.each do |video|
         .video.col-sm-2
