--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,10 +5,9 @@
     %li= link_to "Videos"
     %li= link_to "My Queue"
     %li= link_to "People"
-  %form.col-md-5.navbar-form(action="")
-    .form-group
-      %input.form-control(type="text" placeholder="Search for videos here")
-    %button.btn.btn-default(type="submit") Search
+  = form_tag search_videos_path, class: "span5 for-search" do
+    %input.search-query(name="search_term" type="text" placeholder="Search for videos here")
+    %button.btn(type="submit") Search
   #user_links.pull-right
     %ul
       %li.dropdown
