--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,9 +1,9 @@
 %section#top-header.row
   %h1.col-md-2
-    = link_to "MyFLiX"
+    = link_to "iFLiX"
   - if current_user
     %ul.col-md-4.clearfix
-      %li= link_to "Videos"
+      %li= link_to "Videos", home_path
       %li= link_to "My Queue"
       %li= link_to "People"
     = form_tag search_videos_path, class: "span5 for-search" do
