--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -1,16 +1,33 @@
 %article.video
   .container
     .row
-      .video_large_cover.span7.offset1
+      .video_large_cover.col-sm-7.col-sm-offset1
         %img(src="#{@video.large_cover_url}")
-      .video_info.span3
+      .video_info.col-sm-3
         %header
           %h3= @video.title
         %p= @video.description
 
+
 %section.reviews.container
   .row
-    .col-sm-10.col-sm-offset-1
+    .col-sm-10.col-sm-offset1
+      = form_for [@video, Review.new] do |f|
+        %fieldset
+          .form-group
+            %label Rate this video
+            .row
+              .col-sm-3
+                = f.select :rating, options_for_select([5,4,3,2,1].map {|number| [pluralize(number, "Star")]})
+          .form-group
+            %label Write Review
+            .row
+              .col-sm-12
+                = f.text_area :content, rows: 6, class: "span6"
+        %fieldset.actions.clearfix
+          %input(type="submit" value="Submit" class="btn")
+          = link_to "Cancel", @video
+
       %header
         %h3 User Reviews (#{@reviews.count})
       %ul
@@ -19,6 +36,7 @@
             %li.row
               .col-sm-2
                 %span Rating: #{review.rating} / 5
-                %p by <a href="">#{review.user}</a>
+                %p by <a href="">#{review.user} </a>
               .col-sm-8
                 %p= review.content
+
