--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -7,6 +7,8 @@
         %header
           %h3= @video.title
         %p= @video.description
+        .actions
+          = link_to "+ My Queue", queue_items_path(video_id: @video.id), method: :post, class: "btn"
 
 
 %section.reviews.container
