--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -20,7 +20,7 @@
             %label Rate this video
             .row
               .col-sm-3
-                = f.select :rating, options_for_video_reviews(queue_item.rating), include_blank: true
+                = f.select :rating, options_for_video_reviews
           .form-group
             %label Write Review
             .row
