--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -38,7 +38,9 @@
             %li.row
               .col-sm-2
                 %span Rating: #{review.rating} / 5
-                %p by <a href="">#{review.user} </a>
+                %p
+                  by
+                  = link_to review.user.full_name, review.user
               .col-sm-8
                 %p= review.content
 
