--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,8 +9,8 @@
         %table.table
           %thead
             %tr
-              %th(width="30%") Video Title
-              %th(width="15%") Genre
+              %th(width="30%") Video Name
+              %th(width="15%") Category
           %tbody
             - @user.queue_items.each do |queue_item|
               %tr
