--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -8,6 +8,7 @@
           %h3= @video.title
         %p= @video.description
         .actions
+          %a.btn.btn-primary(href="#{@video.video_url}") Watch Now
           = link_to "+ My Queue", queue_items_path(video_id: @video.id), method: :post, class: "btn" unless current_user.queued_video?(@video)
 
 
