--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,4 +11,4 @@
           = hidden_field_tag :invitation_token, @invitation_token
         %fieldset.actions.control-group.col-sm-offset-2
           .controls
-            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key=#{ENV['STRIPE_PUBLISHABLE_KEY']} data-image="/square-image.png" data-name="iflix Sign Up Charge" data-description="For only $9.99 enjoy all the movies you like" data-amount="999"> </script>
+            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key=#{ENV['STRIPE_PUBLISHABLE_KEY']} data-image="/square-image.png" data-name="iflix Sign Up Charge" data-description="For only $9.99 enjoy all the trailers you like" data-amount="999"> </script>
