--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,7 +4,7 @@
   - if current_user
     %ul.col-md-4.clearfix
       %li= link_to "Videos", home_path
-      %li= link_to "Movies Lists", queue_items_path
+      %li= link_to "my Trailer Lists", queue_items_path
       %li= link_to "People", people_path
     = form_tag search_videos_path, class: "span5 for-search" do
       %input.search-query(name="search_term" type="text" placeholder="Search for videos here")
