--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,9 +1,9 @@
 %section#top-header.row
   %h1.col-md-2
-    = link_to "iFLiX", root_path
+    = link_to "iFLiX -- the future of Trailers", root_path
   - if current_user
     %ul.col-md-4.clearfix
-      %li= link_to "Videos", home_path
+      %li= link_to "Trailers", home_path
       %li= link_to "my Trailer Lists", queue_items_path
       %li= link_to "People", people_path
     = form_tag search_videos_path, class: "span5 for-search" do
